[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/hud.gd" type="Script" id=5]
[ext_resource path="res://scenes/spritetext.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/hud/enemy_indicator.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 3
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="CanvasItemMaterial" id=2]

[node name="hud" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="fade" type="ColorRect" parent="."]
margin_left = -2.0
margin_right = 1278.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="white_fade" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="area_title" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 240.0
margin_top = 620.0
margin_right = 506.0
margin_bottom = 642.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="area_title"]
margin_left = 82.0
margin_right = 183.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/normal = SubResource( 1 )
text = "unnamed area"

[node name="letterbox1" type="Polygon2D" parent="."]
position = Vector2( -2, 0 )
z_index = -1
color = Color( 0, 0, 0, 0 )
polygon = PoolVector2Array( 0, 3.30607e-05, 1280, 9.91821e-05, 1280, 128, 1177.52, 128, 0, 128 )

[node name="letterbox2" type="Polygon2D" parent="."]
position = Vector2( -2, 590 )
z_index = -1
color = Color( 0, 0, 0, 0 )
polygon = PoolVector2Array( 0, 3.30607e-05, 1280, 9.91821e-05, 1280, 128, 0, 128 )

[node name="main_menu" parent="." instance=ExtResource( 1 )]

[node name="control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="death_display" parent="control" instance=ExtResource( 8 )]
position = Vector2( 998, 658 )
text = "deaths: 0"

[node name="enemy_indicator" type="Node2D" parent="control"]
position = Vector2( 640, 64 )
z_index = 10
script = ExtResource( 10 )

[node name="enemy_display" type="Label" parent="control"]
visible = false
material = SubResource( 2 )
anchor_left = 0.7
anchor_top = 0.03
anchor_right = 0.803
anchor_bottom = 0.15
margin_left = 98.0002
margin_top = 552.4
margin_right = 66.1603
margin_bottom = 480.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_as_outline = 0
text = "enemies: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Label" parent="control"]
modulate = Color( 1, 0.87451, 0, 1 )
material = SubResource( 2 )
anchor_left = 0.395
anchor_top = 0.07
anchor_right = 0.455
anchor_bottom = 0.07
margin_left = -195.6
margin_top = -20.4
margin_right = -129.6
margin_bottom = 16.6
rect_scale = Vector2( 6, 6 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0:00"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_small" type="Label" parent="control"]
modulate = Color( 1, 0.992157, 0, 0.823529 )
material = SubResource( 2 )
anchor_left = 0.395
anchor_top = 0.07
anchor_right = 0.455
anchor_bottom = 0.07
margin_left = 308.4
margin_top = 11.6
margin_right = 374.4
margin_bottom = 48.6
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "000"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best" type="Label" parent="control"]
modulate = Color( 1, 1, 1, 0.823529 )
material = SubResource( 2 )
anchor_left = 0.395
anchor_top = 0.07
anchor_right = 0.455
anchor_bottom = 0.07
margin_left = 308.4
margin_top = 59.6
margin_right = 374.4
margin_bottom = 96.6
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_diff" type="Label" parent="control"]
modulate = Color( 1, 1, 1, 0.823529 )
material = SubResource( 2 )
anchor_left = 0.395
anchor_top = 0.07
anchor_right = 0.455
anchor_bottom = 0.07
margin_left = 308.4
margin_top = 107.6
margin_right = 374.4
margin_bottom = 144.6
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "000"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
