[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/palette2.png" type="Texture" id=1]
[ext_resource path="res://src/vignette_focus.gd" type="Script" id=2]
[ext_resource path="res://assets/palette.png" type="Texture" id=3]
[ext_resource path="res://shaders/palette_pixelate.tres" type="Material" id=4]
[ext_resource path="res://src/hud.gd" type="Script" id=5]
[ext_resource path="res://assets/palette3.png" type="Texture" id=6]
[ext_resource path="res://assets/palette6.png" type="Texture" id=7]
[ext_resource path="res://scenes/spritetext.tscn" type="PackedScene" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 focus = vec2(0.5, 0.5);

varying vec2 screen_focus;
varying mat4 world_mat;
varying float len;


void fragment() {
    COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
    float dist = distance(UV.xy * vec2(1.0, 0.56), focus.xy * vec2(1.0, 0.56));
    
    // vignette
    float center_len = clamp(dist, 0.0, 1.0);
    float vign = smoothstep(0.3, 3, dist / 0.5);
    COLOR = vec4(vec3(0.0), vign);
    //COLOR = mix(COLOR, vec4(vec3(0.0), 0.5), pow(center_len, 2));
    //COLOR = mix(vec4(vec3(1.0), 1.0), vec4(vec3(0.0), 1.0), center_len);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/focus = Vector2( 0.5, 0.5 )

[sub_resource type="CanvasItemMaterial" id=3]

[node name="hud" type="CanvasLayer"]
pause_mode = 2
layer = 2
offset = Vector2( 2, 2 )
transform = Transform2D( 1, 0, 0, 1, 2, 2 )
script = ExtResource( 5 )
palettes = [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ) ]

[node name="fade" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="post_processing2" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="letterbox1" type="Polygon2D" parent="."]
position = Vector2( -2, 0 )
color = Color( 0, 0, 0, 0 )
polygon = PoolVector2Array( 0, 3.30607e-05, 1280, 9.91821e-05, 1280, 128, 1177.52, 128, 0, 128 )

[node name="letterbox2" type="Polygon2D" parent="."]
position = Vector2( -2, 590 )
color = Color( 0, 0, 0, 0 )
polygon = PoolVector2Array( 0, 3.30607e-05, 1280, 9.91821e-05, 1280, 128, 0, 128 )

[node name="control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spritetext" parent="control" instance=ExtResource( 8 )]
position = Vector2( 990, 126 )

[node name="enemy_display" type="Label" parent="control"]
material = SubResource( 3 )
anchor_left = 0.7
anchor_top = 0.03
anchor_right = 0.803
anchor_bottom = 0.15
margin_top = 100.0
margin_right = -26.3999
margin_bottom = 114.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.0823529 )
custom_constants/shadow_as_outline = 0
text = "enemies: 0"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="timer" type="Label" parent="control"]
modulate = Color( 1, 1, 1, 0.823529 )
material = SubResource( 3 )
anchor_left = 0.395
anchor_top = 0.07
anchor_right = 0.455
anchor_bottom = 0.07
margin_right = 66.0
margin_bottom = 37.0
rect_scale = Vector2( 5, 5 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.133333 )
text = "0:00:00"
align = 2
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="pixel_filter" type="BackBufferCopy" parent="."]
z_index = 10
z_as_relative = false
copy_mode = 2
rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="post_processing" type="ColorRect" parent="pixel_filter"]
material = ExtResource( 4 )
margin_left = -8192.0
margin_top = -8192.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
